--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@
 # will likely look very different (and much more reasonable)
 
 [package]
-name = "cortex-m-quickstart"
-version = "0.2.4"
-authors = ["Jorge Aparicio <jorge@japaric.io>"]
-description = "A template for building applications for ARM Cortex-M microcontrollers"
-keywords = ["arm", "cortex-m", "template"]
-categories = ["embedded", "no-std"]
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/japaric/cortex-m-quickstart"
+name = "raumfahrer"
+version = "0.0.1"
+# authors = ["Jorge Aparicio <jorge@japaric.io>"]
+# description = "A template for building applications for ARM Cortex-M microcontrollers"
+# keywords = ["arm", "cortex-m", "template"]
+# categories = ["embedded", "no-std"]
+license = "MIT"
+# repository = "https://github.com/japaric/cortex-m-quickstart"
 [profile.dev]
 codegen-units = 1
 incremental = false
@@ -26,8 +26,16 @@ incremental = false
 [profile.release]
 lto = true
 debug = true
+
+[dependencies.stm32f103xx-hal]
+git = "https://github.com/japaric/stm32f103xx-hal"
+features = ["rt"]
+
+[dependencies.stm32f103xx]
+version = "0.8"
+
 [dependencies.cortex-m]
-version = "0.3.0"
+version = "0.4.0"
 
 [dependencies.cortex-m-rt]
 version = "0.3.12"
@@ -35,3 +43,7 @@ features = ["abort-on-panic"]
 
 [dependencies.cortex-m-semihosting]
 version = "0.2.0"
+
+[dependencies.cortex-m-rtfm]
+version = "0.3"
+
