Initial working version of SPI, verified that message comes out over the pins
Still only a PoC, and I need to read up on a couple things still to make sure I am doing what I want.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,12 @@ incremental = false
 lto = true
 debug = true
 
+[dependencies.embedded-hal]
+version = "0.1.0"
+
 [dependencies.stm32f103xx-hal]
 git = "https://github.com/japaric/stm32f103xx-hal"
 features = ["rt"]
-
-[dependencies.stm32f103xx]
-version = "0.8"
 
 [dependencies.cortex-m]
 version = "0.4.0"
