--- a/.cargo/config
+++ b/.cargo/config
@@ -26,7 +26,7 @@ rustflags = [
 ]
 
 [target.thumbv7em-none-eabihf]
-runner = 'arm-none-eabi-gdb'
+runner = 'arm-none-eabi-gdb -tui'
 rustflags = [
   "-C", "link-arg=-Tlink.x",
   "-C", "linker=arm-none-eabi-ld",
